--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script defer src="/_vercel/insights/script.js"></script>
     <meta
       name="description"
       content="A note generating website. Create melodies and come up with new ideas!"
