A big ol' restyle of the app. Using Doodle.

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <script defer src="/_vercel/insights/script.js"></script>
+    <script defer src="/_vercel/insights/script.js"></script>    
     <meta
       name="description"
       content="A note generating website. Create melodies and come up with new ideas!"
@@ -19,7 +19,7 @@
    
     <title>Billions of Notes</title>
   </head>
-  <body>
+  <body class="doodle">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!-- Sorry fren, no cool magic things here! -->
