--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <title>Billions of Notes</title>
   </head>
   <body class="doodle">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app. Sorry fren!</noscript>
     <div id="root"></div>
     <!-- Sorry fren, no cool magic things here! -->
   </body>
