Added tailwind, removed Doodle

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
    
     <title>Billions of Notes</title>
   </head>
-  <body class="doodle">
+  <body>
     <noscript>You need to enable JavaScript to run this app. Sorry fren!</noscript>
     <div id="root"></div>
     <!-- Sorry fren, no cool magic things here! -->
