--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,14 @@
       name="description"
       content="A note generating website. Create melodies and come up with new ideas!"
     />
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
+   <script defer src="https://cloud.umami.is/script.js" data-website-id="2bdacbe6-6941-4ddc-b7c2-d05809c3eb5c"></script>
     <title>Billions of Notes</title>
   </head>
   <body>
